--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -31,3 +31,20 @@
 <br>
 
 <%= link_to 'New Art', new_art_path %>
+
+  <!-- CARDS -->
+<div class="container">
+  <div class="row">
+  <% @arts.each do |art| %>
+    <div class="col-sm-3">
+      <div class="card card text-white bg-secondary mb-3">
+        <img src="<%= art.picture %>" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  </div>
+</div>
+  <!-- CARDS FIN-->
