--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <!-- NAV BAR -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #5d5b6a">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #5d5b6a">
   <a class="navbar-brand" href="#">Musée de l'architecture</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
   </div>
 </nav>
 
+
   <!-- NAV BAR FIN -->
 
-  <!-- CARD FIN-->
 
     <%= yield %>
   </body>
