--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -22,3 +22,5 @@
 
 <%= link_to 'Edit', edit_art_path(@art) %> |
 <%= link_to 'Back', arts_path %>
+
+<%= link_to 'Back', @art.sort, class: 'btn btn-light' %>
