--- a/app/views/sorts/show.html.erb
+++ b/app/views/sorts/show.html.erb
@@ -1,7 +1,7 @@
-<header class="bg-primary text-center py-5 mb-4">
+<header class="bg-light text-center py-5 mb-4">
   <div class="container">
     <% @sorts.each do |sort| %>
-    <h1 class="font-weight-light text-white"><%= sort.artname %></h1>
+    <h1 class="font-weight-light text-dark"><%= sort.artname %></h1>
     <% end %>
   </div>
 </header>
