--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,34 +14,17 @@
 
     <!-- NAV BAR -->
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: transparent;">
-  <a class="navbar-brand" href="#">Musée de l'architecture</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
+<nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: transparent;">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Modification
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">new category</a>
-          <a class="dropdown-item" href="#">new art</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search </button>
+      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search </button>
     </form>
   </div>
 </nav>
 
   <!-- NAV BAR FIN -->
+
 
     <%= yield %>
 
