--- a/app/views/sorts/index.html.erb
+++ b/app/views/sorts/index.html.erb
@@ -2,8 +2,7 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
-        <h1 class="font-weight-light">Musée de l'architecture</h1>
-        <p class="lead">créé par Mathieu Delepine</p>
+        <h1 class="font-weight-light">Musée en tout genre</h1>
       </div>
     </div>
   </div>
@@ -11,20 +10,22 @@
 
 
   <!-- CARDS -->
-<section class="py-5">
+<section class="py-5 ">
 <div class="container">
   <%= link_to 'New Sort', new_sort_path, class: 'btn btn-light' %>
   <div class="row py-5">
   <% @sorts.each do |sort| %>
     <div class="col-sm-12">
-      <div class="card text-black bg-secondary mb-3 card border-0 shadow">
-        <img src="<%= sort.image %>" class="card-img" alt="Image Here">
-        <div class="card-img-overlay">
+      <div class="card text-black bg-light mb-3 border-0 shadow rounded">
+        <img src="<%= sort.image %>" class="card-img rounded-lg" alt="Image Here">
+        <div class="card-body">
           <h5 class="card-title"><%= sort.artname %></h5>
-          <%= link_to 'Show', sort, class: 'btn btn-dark' %>
-          <%= link_to 'Edit', edit_sort_path(sort), class: 'btn btn-dark' %>
+          <div class="btn-group" role="group" aria-label="Basic example">
+          <%= link_to 'Show', sort, class: 'btn btn-outline-secondary' %>
+          <%= link_to 'Edit', edit_sort_path(sort), class: 'btn btn-outline-secondary' %>
 
-          <%= link_to 'Destroy', sort, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-dark' %>
+          <%= link_to 'Destroy', sort, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-secondary' %>
+          </div>
         </div>
       </div>
     </div>
