--- a/app/views/sorts/show.html.erb
+++ b/app/views/sorts/show.html.erb
@@ -1,31 +1,33 @@
 <header class="bg-light text-center py-5 mb-4">
   <div class="container">
-    <% @sorts.each do |sort| %>
-    <h1 class="font-weight-light text-dark"><%= sort.artname %></h1>
-    <% end %>
+    <h1 class="font-weight-light text-dark"><%= @sort.artname %></h1>
   </div>
 </header>
 
   <!-- CARDS -->
 
 <!-- Page Content -->
-<div class="container">
+<div class="container pt-5">
   <div class="row">
     <% @sort.arts.each do |art| %>
     <!-- Team Member 1 -->
-    <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow">
+    <div class="col-xl-3 col-md-6 mb-4 ">
+      <div class="card border-0 shadow rounded-pill">
         <img src="<%= art.picture %>" class="card-img-top" alt="...">
         <div class="card-body text-center">
           <h5 class="card-title mb-0"><%= art.name %></h5>
+          <div class="py-3">
           <%= link_to 'Show', art, class: 'btn btn-light'%>
+          </div>
         </div>
       </div>
     </div>
   <% end %>
   </div>
-
-<%= link_to 'Back', sorts_path, class: 'btn btn-light'%>
 </div>  
+
+<div class="container py-5">
+<%= link_to 'Back', sorts_path, class: 'btn btn-light'%>
+</div>
 
   <!-- CARDS FIN-->
