--- a/app/views/sorts/show.html.erb
+++ b/app/views/sorts/show.html.erb
@@ -12,7 +12,7 @@
     <% @sort.arts.each do |art| %>
     <!-- Team Member 1 -->
     <div class="col-xl-3 col-md-6 mb-4 ">
-      <div class="card border-0 shadow rounded-pill">
+      <div class="card border-0 shadow">
         <img src="<%= art.picture %>" class="card-img-top" alt="...">
         <div class="card-body text-center">
           <h5 class="card-title mb-0"><%= art.name %></h5>
